/*
 * Copyright 2017 - 2024 the original author or authors.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see [https://www.gnu.org/licenses/]
 */
description = "today-blog API"

apply plugin: "application"
apply plugin: 'cn.taketoday.application'
apply plugin: 'cn.taketoday.blog.conventions'
apply plugin: 'cn.taketoday.blog.optional-dependencies'

//apply plugin: 'cn.taketoday.application.aot'
//apply plugin: 'org.graalvm.buildtools.native'

dependencies {

  implementation 'cn.taketoday:ip2region-java:1.0-SNAPSHOT'
  implementation 'cn.taketoday:today-starter-netty'
  implementation 'cn.taketoday:today-starter-json'
  implementation 'cn.taketoday:today-starter-validation'
  implementation 'cn.taketoday:today-starter-jdbc'
  implementation 'cn.taketoday:today-starter-freemarker'
  implementation 'org.kohsuke:github-api:1.301'
  implementation 'eu.bitwalker:UserAgentUtils:1.21'
  implementation 'com.mysql:mysql-connector-j'
  implementation 'com.aliyun.oss:aliyun-sdk-oss:3.16.0'

  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  implementation 'ch.qos.logback:logback-classic'
  implementation 'jakarta.mail:jakarta.mail-api'
  implementation 'jakarta.activation:jakarta.activation-api'
  implementation 'com.sun.mail:jakarta.mail'
  implementation 'com.github.ben-manes.caffeine:caffeine'
  implementation 'io.prometheus:simpleclient'
  implementation 'io.prometheus:simpleclient_common'
  implementation 'io.prometheus:simpleclient_logback'

  annotationProcessor "cn.taketoday:infra-configuration-processor"
  annotationProcessor "cn.taketoday:infra-annotation-config-processor"

  testImplementation 'cn.taketoday:today-starter-test'
  testImplementation 'io.projectreactor:reactor-test'

  testImplementation("org.junit.jupiter:junit-jupiter-api")
  testImplementation("org.junit.jupiter:junit-jupiter-params")
  testImplementation("org.junit.platform:junit-platform-suite-api")
  testImplementation("org.mockito:mockito-core")
  testImplementation("org.mockito:mockito-junit-jupiter")
  testImplementation("junit:junit")
  testImplementation("org.assertj:assertj-core")
  testImplementation 'org.projectlombok:lombok'
  testAnnotationProcessor("org.projectlombok:lombok")

  // Pull in the latest JUnit 5 Launcher API to ensure proper support in IDEs.
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
  testRuntimeOnly("org.junit.platform:junit-platform-suite-engine")

}

compileJava {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
  options.encoding = 'UTF-8'
  options.compilerArgs << '-parameters'

}

application {
  mainClass = 'cn.taketoday.blog.BlogApplication'
  applicationDefaultJvmArgs = [
      "-server",
      "--add-opens=java.base/java.nio=ALL-UNNAMED",
      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
      "-Dinfra.profiles.active=prod",
      "-Dio.netty.leakDetection.level=disabled",
      "-Xms512M",
      "-Xmx512M"
  ]
}

infraJar {
  layered {
    includeLayerTools = false
  }
}

infraApplication {
  buildInfo()
}

infraBuildImage {
//  pullPolicy = "IF_NOT_PRESENT"
  applicationDirectory = "/application"
  network = "host"
//  createdDate = Instant.now().toString()
}

distributions {
  main {
    contents {
      from("src/main/bin") {
        into 'bin'
        filePermissions {
          unix("rwxr-xr-x")
        }
      }
    }
  }
}